--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "4.0.3",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^4.0.14",
     "web-vitals": "^1.1.2"
   },
